--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ python-dotenv   # loading env variables from .env file
 scikit-learn    # misc ML helpers
 seaborn         # plotting
 jupyterlab      # better jupyter notebooks
+wheel           # Eases installation of some deps
