--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ scikit-learn    # misc ML helpers
 seaborn         # plotting
 jupyterlab      # better jupyter notebooks
 wheel           # Eases installation of some deps
+einops~=0.3.0   # Eases operations on tensors
