--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ seaborn         # plotting
 jupyterlab      # better jupyter notebooks
 wheel           # Eases installation of some deps
 einops~=0.3.0   # Eases operations on tensors
+matplotlib      # plotting
