--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 
 # --------- pytorch --------- #
 torch~=1.10.0
-torchvision~=0.11.0
 pyro-ppl~=1.7.0
 torchmetrics~=0.6.0
 
@@ -13,5 +12,5 @@ jupyterlab        # better jupyter notebooks
 wheel             # Eases installation of some deps
 einops~=0.3.0     # Eases operations on tensors
 matplotlib        # plotting
-h5py~=3.5.0       # Saving and loading of hdf5 files
+h5py~=3.1.0       # Saving and loading of hdf5 files (no longer needed?)
 graphviz~=0.18.2  # Plotting graphical models
